# backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.yaml  dev.yaml  docker-compose.dev.yaml  docker-compose.yaml  init-venv.sh  local.yaml  logger.yaml  path.py  prod.yaml  pyproject.toml  start-dev.sh
alembic/: env.py
alembic/versions/: 00471da6d70a_users.py  20250711_122603_insert_service_trigger.py  20250714_180513_delete_cascade_user_permissions.py  44c5a5d34952_user_permissions.py  4c41f44169a2_broker_service_accounts.py  52757d0888aa_.py  60b441729123_service.py  6100d134d2bd_user.py  62cb69e2140c_broker.py  69ea269c298a_brokers_and_users.py  993f48ebda16_init.py  9d0ae3f7e322_rename_timestamp_fields.py  d3483978a039_insert_user_trigger.py
app/: app_factory.py  container.py  loader.py  logger.py  main-dev.py  main-prod.py  main.py  session_factory.py
app/components/: __init__.py  cache.py  database.py  jwt.py
app/config/: __init__.py  app.py  db.py  jwt.py  reader.py  redis.py  smtp.py  uvicorn.py
app/models/: __init__.py  account.py  base.py  broker.py  permissions.py  service.py  user.py
app/providers/: __init__.py  cache.py  config.py  service.py  session.py  unit_of_work.py  user.py
app/repository/: __init__.py  account.py  base.py  broker.py  permission.py  service.py  user.py
app/routers/: __init__.py  account.py  auth.py  service.py  tags.py  user.py
cmd/: create-migration.sh  downgrade-1.sh  downgrade-head.cmd  migrate.sh  start-dev.sh  start-local.sh
config/: dev.yaml  local.yaml
nginx/: nginx.conf
(+62 files in other folders)
