[project]
name = "cars"
version = "0.1.0"
description = ""
authors = [
    {name = "blackmamba2004",email = "vasilsemen04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "dishka (>=1.6.0,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (==4.0.1)",
    "passlib (>=1.7.4,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "emails (>=0.6,<0.7)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=6.2.0,<7.0.0)",
    "uvloop (>=0.21.0,<0.22.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
